--- a/Restful/幂等性.md
+++ b/Restful/幂等性.md
@@ -92,6 +92,13 @@ client      server
 3） 用户自己调用了api,重复提交创建/修改
 
 
+# 幂等
+相同请求无副作用
+
+相同请求重复提交多次并行执行，导致不一致的问题。
+相同请求重复提交多次串行执行， 导致重复插入的问题。
+
+
 
      
      
