--- a/Restful/可靠的分布式锁.md
+++ b/Restful/可靠的分布式锁.md
@@ -5,4 +5,19 @@
 4. 保证高可用性,避免单节点问题
 5. 多节点保证加锁和释放锁的一致性
 6. 公平锁的实现
+7. 还要考虑锁的性能问题
+8.可重入锁
 
+
+http://zhangtielei.com/posts/blog-redlock-reasoning.html
+
+
+
+Zookeeper/Redis高可用集群
+主从架构
+ 主节点写， 从节点复制主节点， 当主节点下线由从节点升级为主节点。
+  这种架构牺牲了 加锁/解锁的性能， 但是保证了加锁/解锁的一致性和分布式锁的高可用性。
+  
+  加锁的client/线程下线，必须触发自动解锁；
+  
+  
