--- a/Restful/幂等性.md
+++ b/Restful/幂等性.md
@@ -9,7 +9,27 @@
 对一个相同的请求， 应该返回相同的结果。所以查询类接口是天然的幂等性接口。
 
 但是笔者的理解是
-幂等指的是相同请求（identical request）执行一次或者多次所带来的副作用（side-effects）是一样的；即相同请求无副作用。
+相同请求执行一次或者多次不会带来副作用。
 
 什么是相同的请求？相同的请求会带来那些副作用？如何避免相同的请求带来的副作用？
 
+提交创建， 相同请求重复提交， 可能会带来  会导致插入两条或多条相同的数据；
+
+
+提交修改， 相同扣款请求重复提交， 可能会带来 重复扣款的副作用；
+
+相同的删除请求提交多次不会带来副作用的。
+
+相同请求提交方式：串行提交和并行提交。
+
+当提交创建的时候，并行提交， 会导致插入两条或多条相同的数据。
+对于重复请求， 就得把并行提交变成串行提交。
+
+
+如何避免副作用呢？
+
+一锁， 二判， 三更新
+
+所以在并发执行的维度，将并发重复执行变成串行重复执行是最好的幂等解决方案。支付宝最常见的方法就是：一锁二判三更新，如下图。当一个请求过来之后：一锁，锁住要操作的资源；二判，识别是否为重复请求（第一部曲要定义的问题）、判断业务状态是否正常；三更新：执行业务逻辑。
+
+一锁：将并发重复执行变成串行重复执行。
