幂等性问题

--- a/Restful/幂等性.md
+++ b/Restful/幂等性.md
@@ -33,3 +33,24 @@
 所以在并发执行的维度，将并发重复执行变成串行重复执行是最好的幂等解决方案。支付宝最常见的方法就是：一锁二判三更新，如下图。当一个请求过来之后：一锁，锁住要操作的资源；二判，识别是否为重复请求（第一部曲要定义的问题）、判断业务状态是否正常；三更新：执行业务逻辑。
 
 一锁：将并发重复执行变成串行重复执行。
+锁粒度： 锁住用户当前的操作。或者锁住要操作的共享资源。
+
+比如用户提交评论和提交支付请求， 这就是两个独立的操作， 锁住某个用户提交评论的操作或者锁住某个用户提交支付请求的操作。
+
+
+
+二判： 识别重复请求
+
+如何识别重复的请求？ 
+
+构造唯一性字段， 以唯一性字段为判断依据， 这是避免重复插入。
+
+查询当前单据的状态， 如果单据状态为“已付款”，则拒绝重复扣款。
+
+
+
+三更新： 执行业务逻辑。
+
+
+
+
