幂等性问题

--- a/Restful/幂等性.md
+++ b/Restful/幂等性.md
@@ -5,11 +5,18 @@
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 
 
+# 什么是幂等性？
+
+
 一般对幂等性的描述是：
 对一个相同的请求， 应该返回相同的结果。所以查询类接口是天然的幂等性接口。
 
 但是笔者的理解是
 相同请求执行一次或者多次不会带来副作用。
+
+
+# 相同提交、副作用、及其解决方案
+
 
 什么是相同的请求？相同的请求会带来那些副作用？如何避免相同的请求带来的副作用？
 
@@ -26,7 +33,7 @@
 对于重复请求， 就得把并行提交变成串行提交。
 
 
-如何避免副作用呢？
+# 如何避免副作用呢？
 
 一锁， 二判， 三更新
 
