--- a/Restful/可靠的分布式锁.md
+++ b/Restful/可靠的分布式锁.md
@@ -24,4 +24,9 @@ Zookeeper/Redis高可用集群
 # MySQL分布式锁
  借助事务的特性和回滚机制、超时连接事务失败并回滚，实现MySQL自动释放由下线的客户端添加的锁。
  
- 
+ 1. 锁粒度
+  锁住某个共享资源、 锁住某个操作、 锁住某个方法、 全局锁（所有用户中只能一个获取锁）、 用户锁（用户级别的锁）
+
+ 根据业务可以划分多种锁粒度
+
+
