--- a/Restful/可靠的分布式锁.md
+++ b/Restful/可靠的分布式锁.md
@@ -45,7 +45,8 @@ Redis高可用集群
 
 Redis 主从架构实现了高可用性， 但是牺牲了一致性  
 
-Redis 为什么基于故障转移的实现还不够
+**Redis 为什么基于故障转移的实现还不够**
+
 为了更好的理解我们想要改进的方面，我们先分析一下当前大多数基于Redis的分布式锁现状和实现方法.
 
 实现Redis分布式锁的最简单的方法就是在Redis中创建一个key，这个key有一个失效时间（TTL)，以保证锁最终会被自动释放掉（这个对应特性2）。当客户端释放资源(解锁）的时候，会删除掉这个key。
@@ -55,14 +56,14 @@ Redis 为什么基于故障转移的实现还不够
 在这种场景（主从结构）中存在明显的竞态:
 
 客户端A从master获取到锁
+
 在master将锁同步到slave之前，master宕掉了。
+
 slave节点被晋级为master节点
+
 客户端B取得了同一个资源被客户端A已经获取到的另外一个锁。安全失效！
-有时候程序就是这么巧，比如说正好一个节点挂掉的时候，多个客户端同时取到了锁。如果你可以接受这种小概率错误，那用这个基于复制的方案就完全没有问题。否则的话，我们建议你实现下面描述的解决方案。
 
-
-
-
+有时候程序就是这么巧，比如说正好一个节点挂掉的时候，多个客户端同时取到了锁。如果你可以接受这种小概率错误，那用这个基于复制的方案就完全没有问题。
 
 
 
