--- a/Restful/可靠的分布式锁.md
+++ b/Restful/可靠的分布式锁.md
@@ -16,9 +16,22 @@
 
 7. 可重入锁
 
+可重入锁，也叫做递归锁，指的是同一线程 外层函数获得锁之后 ，内层递归函数仍然有获取该锁的代码，但不受影响。
+
+可重入锁最大的作用是避免死锁。
+
+
 8. 死锁、活锁、 饥饿
+ 死锁是相互等待。 活锁相互礼让。 饥饿是永远轮不到执行。
+
+ 9. 阻塞和非阻塞
 
 
+
+
+一些实现分布式锁的文章
+
+https://www.hollischuang.com/archives/1716
 
   
 # MySQL分布式锁
@@ -28,6 +41,59 @@
   锁住某个共享资源、 锁住某个操作、 锁住某个方法、 全局锁（所有用户中只能一个获取锁）、 用户锁（用户级别的锁）
 
  根据业务可以划分多种锁粒度
+
+ 2. 可重入锁
+在加锁之前，先查询对应的锁是否已经存在了。
+
+
+3. 实现
+
+ 关闭事务， 直接插入，保证数据库存在这个锁
+
+开始事务， 更新这条记录的 lock字段为true
+
+update tb_lock set lock=true  # 阻塞更新
+
+执行业务逻辑
+
+
+释放锁
+ 
+ update tb_lock set lock=false   # 阻塞更新
+
+事务提交
+
+伪代码： 
+   public Object lockAndExec(Object agrs){
+        //  关闭事务， 直接插入，保证数据库存在这个锁
+
+        // 开始事务， 更新这条记录的 lock字段为true
+        //update tb_lock set lock=true  # 阻塞更新
+
+
+        //执行业务逻辑
+       Object result =  dosometing(agrs);
+
+
+       //释放锁
+        // update tb_lock set lock=false   # 阻塞更新
+        //事务提交
+
+       return result;
+    }
+
+    private Object dosometing(Object agrs) {
+        return null;
+    }
+
+可以用装饰者模式， 静态代理、jdk动态代理、或者AOP， 来实现
+
+
+实现了互斥、阻塞、当client下线，事务自动解锁； 高可用。
+
+但是占用了连接池的连接数。加锁的事务和业务代码的事务用同一个事务的话， 就不用多占用一个连接数了。
+
+
 
 
 
@@ -64,6 +130,22 @@ slave节点被晋级为master节点
 客户端B取得了同一个资源被客户端A已经获取到的另外一个锁。安全失效！
 
 有时候程序就是这么巧，比如说正好一个节点挂掉的时候，多个客户端同时取到了锁。如果你可以接受这种小概率错误，那用这个基于复制的方案就完全没有问题。
+
+
+**使用缓存实现分布式锁的缺点**
+
+
+通过超时时间来控制锁的失效时间并不是十分的靠谱。
+
+
+
+# Zookeeper
+
+其实，使用Zookeeper也有可能带来并发问题，只是并不常见而已。考虑这样的情况，由于网络抖动，客户端可ZK集群的session连接断了，那么zk以为客户端挂了，就会删除临时节点，这时候其他客户端就可以获取到分布式锁了。就可能产生并发问题。这个问题不常见是因为zk有重试机制，一旦zk集群检测不到客户端的心跳，就会重试，Curator客户端支持多种重试策略。多次重试之后还不行的话才会删除临时节点。（所以，选择一个合适的重试策略也比较重要，要在锁的粒度和并发之间找一个平衡。）
+
+Zookeeper和client的连接和感知基于 session
+
+
 
 
 
